// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElement renders a button with custom styles 1`] = `
<button
  className="css-12uj0k6-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-i7sfrf"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</button>
`;

exports[`ButtonElement renders a button with plain text 1`] = `
<button
  className="css-12uj0k6-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-i7sfrf"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</button>
`;

exports[`ButtonElement renders an empty ButtonElement element 1`] = `
<button
  className="css-1ol2xm8-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-i7sfrf"
      onClick={[Function]}
    >
      

    </span>
  </div>
</button>
`;
